@@ -4,7 +4,9 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,6 +23,7 @@ import com.app.dto.RawDataDTO;
 import com.app.mapper.DataMapper;
 import com.google.gson.Gson;
 
+import lombok.extern.java.Log;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -39,11 +42,14 @@ public class DataService {
 		int callCount; //지금까지 카운팅 된 수로 시작점 지정 >> 밖에다 적어 놓기로! >> database에 기록해두는것.
 		SimpleDateFormat format = new SimpleDateFormat ("yyyy-MM-dd");
 		Date now = new Date();
-		String currentDate = format.format(now); 
+		String toDay = format.format(now);
+		Map<String, Object> map = new HashMap<>();
+		log.info("오늘 날짜: {}", toDay);
 		
-		if(!dataMapper.getCount(currentDate).isEmpty()) {
+		log.info(" : {}", dataMapper.getCount(toDay));
+		if(!dataMapper.getCount(toDay).isEmpty()) {
 			log.info("처음이야?");
-			callCount = dataMapper.getCount(currentDate).getFirst();
+			callCount = dataMapper.getCount(toDay).get(0);
 		}else{
 			log.info("처음이다 왜?");
 			callCount = 0;
@@ -53,8 +59,10 @@ public class DataService {
 				TimeUnit.MILLISECONDS.sleep(100);
 				if(callCount >= MaxCount) {
 					log.info("멈출 때가 됐다");
+					map.put("countdate", toDay);
+					map.put("count", callCount);
+					dataMapper.setCount(map);
 					break; // 중간점검: 25000개를 다 사용했을 때! >> 강종
-
 				}
 				String dataFromNaver = naverSearchList(getOne.getAreaNm() + " " + getOne.getStoreNm());
 //				log.info("네이버에서 가져온 것: {}", dataFromNaver);
@@ -68,7 +76,6 @@ public class DataService {
 				
 				for(ItemDTO nItem : nData.getItems()) {
 					String category = nItem.getCategory().split(">")[0];
-					System.out.println("나와라!:" + category);
 					if(!"한식".equals(category)  && !"음식점".equals(category)) continue;
 					if(!nItem.getAddress().contains(getOne.getAreaNm())) continue; //네이버 데이터 & rawData 내의 지역 불일치하면 다음으로 긔긔
 			
@@ -90,32 +97,31 @@ public class DataService {
 							.build();
 					break;
 				}
-				log.info("확인하며 공부하기^^ : {}", ourData);
-				
-				//카운팅 다 끝났을 때! 종료 지점 >> update 0925 할 일
-				/**********************내일은 여기다***********************/
-				
-				
-				
+				log.info("확인하며 공부하기^^ : {}", ourData);			
+								
 		//			값이 null 이면 insert 안하도록 만들어보기
 		//			① 배열에 저장된 값의 타입과 반복문에서 사용할 변수명 : 배열객체 이름
 				if(ourData != null) {
 					if(dataMapper.setOwnData(ourData) > 0)
-						System.out.println("데이터 입력!");
+						log.info("데이터 입력: {}", ourData);
 					else
-						System.out.println("데이터 안 입력!");
+						log.info("데이터 안 입력!: {}" , ourData);
 				}
-				else System.out.println("널뛴다!!");
-				
+				else log.info("널뛴다! : {}", ourData);
 			}
+			
+			//카운팅은 이미 종료! >> update 뭘 업데이트 하냐? 얼마나 카운팅 됐는지 날짜별 업뎃! >> 항상 '오늘'날짜로 업데이트 하는거지!
+			/**********************내일은 여기다***********************/
+			map.put("countdate", toDay);
+			map.put("count", callCount);
+			log.info("확인용: {}", map);
+			dataMapper.setCount(map);		
+			
 		}
 		 catch (InterruptedException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 		}
-		
 	}
-	
 
 	private String naverSearchList(String text) {
 		
